deployments/traefik/staging/middleware-strip.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: strip-im-wallet-prefix
  namespace: aka-staging
spec:
  stripPrefix:
    prefixes:
      - /im-wallet
    forceSlash: false
